# wasmer-plugin

./: Cargo.toml  LICENSE-APACHE  README.md  out.rs
crates/wasmer_plugin_macro/: Cargo.toml
crates/wasmer_plugin_macro/src/: lib.rs
examples/: simple.rs  simple_expanded.rs
examples/example_plugin/: Cargo.toml
examples/example_plugin/src/: lib.rs
examples/example_runner/: Cargo.toml
examples/example_runner/src/: lib.rs  main.rs
src/: lib.rs
